syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "fin";

service FinSvc {
    //rpc GetAnnualBalanceSheet(Symbol) returns (BalanceSheet);
    rpc GetAnnualBalanceSheets(GetRequest) returns (BalanceSheets);
}

message GetRequest {
    string symbol = 1;
    int32  limit = 2;
}

message BalanceSheets {
    repeated BalanceSheet balanceSheets= 1;
}

message BalanceSheet {
    google.protobuf.Timestamp reportDate = 1;
    string                    filingType = 2;
    google.protobuf.Timestamp fiscalDate = 3;
    int32                     fiscalQuarter = 4;
    int32                     fiscalYear = 5;
    string                    currency = 6;
    double                    currentCash = 7;
	double                    shortTermInvestments = 8;
	double                    receivables = 9;
	double                    inventory = 10;
	double                    otherCurrentAssets = 11;
	double                    currentAssets = 12;
	double                    longTermInvestments = 13;
	double                    propertyPlantEquipment = 14;
	double                    goodwill = 15;
	double                    intangibleAssets = 16;
	double                    otherAssets = 17;
	double                    totalAssets = 18;
	double                    accountsPayable = 19;
	double                    currentLongTermDebt = 20;
	double                    otherCurrentLiabilities = 21;
	double                    totalCurrentLiabilities = 22;
	double                    longTermDebt = 23;
	double                    otherLiabilities = 24;
	double                    minorityInterest = 25;
	double                    totalLiabilities = 26;
	double                    commonStock = 27;
	double                    retainedEarnings = 28;
	double                    treasuryStock = 29;
	double                    capitalSurplus = 30;
	double                    shareholderEquity = 31;
	double                    netTangibleAssets = 32;
}
